# screening-test

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/skills/portfolio/: skill.md
.claude/skills/report/: skill.md
.claude/skills/screening/: skill.md
.claude/skills/stress_test/: skill.md
.claude/skills/watchlist/: skill.md
config/: thresholds.yaml
src/screening_test/: __init__.py  main.py  mcp_server.py
src/screening_test/core/: __init__.py  portfolio.py  report.py  scoring.py  screening.py  stress_test.py  watchlist.py
src/screening_test/data/: __init__.py  client.py  tickers.py
tests/: test_client.py  test_main.py  test_mcp_server.py  test_portfolio.py  test_scoring.py  test_stress_test.py  test_tickers.py  test_watchlist.py
